[workspace]
members = [".", "macros"]

[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "#[you_can::turn_off_the_borrow_checker]"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "you-can"
repository = "https://github.com/jeremyBanks/you-can"
version = "0.0.14"

[dependencies]
you-can-build-macros = { path = "./macros", version = "0.0.14"}

[dev-dependencies]
compiletest_rs = { version = "0.8.0", features=["tmp"] }
rustc_version = "0.4.0"

[workspace.metadata.release]
allow-branch = ["trunk", "main", "master"]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
