[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "ಠ_ಠ"
edition = "2021"
homepage = "https://docs.rs/you-can/latest/you_can/attr.turn_off_the_borrow_checker.html"
license = "MIT OR Apache-2.0"
name = "you-can-build-macros"
repository = "https://github.com/jeremyBanks/you-can"
version = "0.0.5"

[lib]
proc-macro = true
path = "./lib.rs"

[dependencies]
crossterm = "0.22.1"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["default", "full", "visit", "visit-mut", "extra-traits", "fold"] }

[package.metadata.release]
allow-branch = ["trunk", "main", "master"]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
