[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "ಠ_ಠ"
documentation = "https://docs.rs/you-can/latest/you_can/attr.turn_off_the_borrow_checker.html"
edition = "2021"
homepage = "https://crates.io/crates/you-can"
license = "MIT OR Apache-2.0"
name = "unbounded"
repository = "https://github.com/jeremyBanks/you-can"
version = "0.0.9"

[lib]
path = "./lib.rs"

[dependencies]
you-can = { path = "../", version = "^0.0.9"}
